src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-53.snap
---
source: src/lexer.rs
description: ^
---
[
    Token {
        kind: BitXor,
        value: None,
    },
]
