src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-54.snap
---
source: src/lexer.rs
description: "~"
---
[
    Token {
        kind: BitNot,
        value: None,
    },
]
