src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-55.snap
---
source: src/lexer.rs
description: ":="
---
[
    Token {
        kind: Walrus,
        value: None,
    },
]
