src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-57.snap
---
source: src/lexer.rs
description: ">"
---
[
    Token {
        kind: Greater,
        value: None,
    },
]
