src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-58.snap
---
source: src/lexer.rs
description: "<="
---
[
    Token {
        kind: LessEq,
        value: None,
    },
]
