src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-59.snap
---
source: src/lexer.rs
description: ">="
---
[
    Token {
        kind: GreaterEq,
        value: None,
    },
]
