src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-60.snap
---
source: src/lexer.rs
description: "=="
---
[
    Token {
        kind: Eq,
        value: None,
    },
]
