src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-62.snap
---
source: src/lexer.rs
description: False None True and as assert async await
---
[
    Token {
        kind: False,
        value: None,
    },
    Token {
        kind: None,
        value: None,
    },
    Token {
        kind: True,
        value: None,
    },
    Token {
        kind: And,
        value: None,
    },
    Token {
        kind: As,
        value: None,
    },
    Token {
        kind: Assert,
        value: None,
    },
    Token {
        kind: Async,
        value: None,
    },
    Token {
        kind: Await,
        value: None,
    },
]
