src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-67.snap
---
source: src/lexer.rs
description: a_a
---
[
    Token {
        kind: Identifier,
        value: String(
            "a_a",
        ),
    },
]
