src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-68.snap
---
source: src/lexer.rs
description: _a
---
[
    Token {
        kind: Identifier,
        value: String(
            "_a",
        ),
    },
]
